REGRESSION(r275515): wpt/quirks/blocks-ignore-line-height.html https://bugs.webkit.org/show_bug.cgi?id=225591 <rdar://problem/77766308>

Reviewed by Antti Koivisto.

Source/WebCore:

Replace the generic line height quirk with a list-item specific one.
The original quirk was added to cover fast/lists/list-item-line-height.html but it looks like
it only needs a list-item specific quirk. This is copied from legacy line layout (see InlineFlowBox c'tor).

Test: fast/inline/line-height-in-non-standards-mode.html

* layout/formattingContexts/inline/InlineFormattingContextQuirks.cpp:
(WebCore::Layout::InlineFormattingContext::Quirks::inlineLevelBoxAffectsLineBox const):
* layout/integration/LayoutIntegrationBoxTree.cpp:
(WebCore::LayoutIntegration::rootBoxStyle):
* rendering/style/RenderStyle.h:
(WebCore::RenderStyle::isOriginalDisplayListItemType const):
(WebCore::RenderStyle::isDisplayListItemType):

LayoutTests:

* fast/inline/incorrect-middle-baseline-alignment-with-line-height-expected.html: progression.
* fast/inline/line-height-in-non-standards-mode-expected.html: Added.
* fast/inline/line-height-in-non-standards-mode.html: Added.


Canonical link: https://commits.webkit.org/237584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277325 268f45cc-cd09-0410-ab3c-d52691b4dbfc